<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <com.cl.common_base.widget.FeatureTitleBar
                android:id="@+id/titleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:textStyle="bold"
                android:id="@+id/tvTitle"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/home_calendar_settings_for"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold"
                tools:text="stepShow"
                android:id="@+id/tv_period"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:textSize="24sp"
                android:textColor="@color/mainColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="24dp"
                android:text="@string/home_recommended_tasks"
                android:textSize="16sp"
                android:layout_marginStart="14dp"
                android:id="@+id/tv_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_period"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/iv_add"
                android:layout_marginBottom="10dp"
                android:layout_height="0dp"/>

            <ImageView
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@mipmap/home_zp_add"
                android:id="@+id/iv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_calendar"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_success"
                app:layout_constraintTop_toBottomOf="@+id/iv_add"
                android:text="@string/home_use_official_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_success"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/create_state_button"
                android:text="@string/my_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tv_recommend"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_success"
                android:text="@string/home_setup_later"
                android:textColor="#4D4D4D"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>